[Qt] Various doc fixes https://bugs.webkit.org/show_bug.cgi?id=31358

Reviewed by Kenneth Christiansen.

Fixed wrong documentation: item's dimensions do fit to Web page
content by default.

Kenneth agreed to land this as a followup patch to the
just landed documentation patch.

* Api/qgraphicswebview.cpp:

Canonical link: https://commits.webkit.org/42289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50860 268f45cc-cd09-0410-ab3c-d52691b4dbfc