WebKit/qt/Api/qgraphicswebview.cpp
@@ -164,9 +164,9 @@ QObject* QGraphicsWebViewPrivate::pluginParent() const
     An instance of this class renders Web content from a URL or supplied as data, using
     features of the QtWebKit module.
 
-    If the width and height of the item is not set, they will dynamically adjust to
-    a size appropriate for the content. This width may be large (e.g., 980 pixels or
-    more) for typical online Web pages.
+    If the width and height of the item are not set, they will default to 800 and 600,
+    respectively. If the Web page contents is larger than that, scrollbars will be shown
+    if not disabled explicitly.
 
     \section1 Browser Features
 
